[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/UI/HimariWin.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Rapha and Monika.png" type="Texture" id=2]
[ext_resource path="res://Scripts/EndScreen.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1104.0
margin_bottom = 67.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Thanks for playing!"
align = 1

[node name="TextureRectWin" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 71.0
margin_right = 1104.0
margin_bottom = 1109.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
stretch_mode = 1

[node name="Label3" type="Label" parent="."]
margin_left = 566.0
margin_top = 83.0
margin_right = 1036.0
margin_bottom = 261.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true

[node name="TextureRectLose" type="TextureRect" parent="."]
margin_left = 58.0
margin_top = 90.0
margin_right = 1138.0
margin_bottom = 1170.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="MenuButton" type="Button" parent="."]
margin_left = 800.0
margin_top = 480.0
margin_right = 572.0
margin_bottom = 536.0
size_flags_horizontal = 4
text = "Menu"

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
